Add spatial support preparation code

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <version>LATEST</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.sgr</groupId>
+            <artifactId>s2-geometry-library-java</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
