--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,30 @@
     <dependencies>
 
         <dependency>
+            <groupId>net.cloventt</groupId>
+            <artifactId>intervalTree</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.datasyslab</groupId>
+            <artifactId>geospark</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.datasyslab</groupId>
+            <artifactId>geospark-sql_2.1</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.datasyslab</groupId>
+            <artifactId>geospark-viz</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
@@ -121,6 +145,12 @@
             <groupId>org.fusesource.leveldbjni</groupId>
             <artifactId>leveldbjni-all</artifactId>
             <version>1.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.sgr</groupId>
+            <artifactId>s2-geometry-library-java</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
     </dependencies>
@@ -273,7 +303,7 @@
                                     <exclude>org.json4s:json4s*</exclude>
                                     <exclude>org.mortbay.jetty:jetty*</exclude>
                                     <exclude>org.objenesis:objenesis</exclude>
-                                    <exclude>org.roaringbitmap:RoaringBitmap</exclude>
+                                    <!--<exclude>org.roaringbitmap:RoaringBitmap</exclude>-->
                                     <exclude>org.scala-lang:*</exclude>
                                     <exclude>org.slf4j:jul-to-slf4j</exclude>
                                     <exclude>org.slf4j:jcl-over-slf4j</exclude>
