--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>ch.hsr</groupId>
+            <artifactId>geohash</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>net.cloventt</groupId>
             <artifactId>intervalTree</artifactId>
             <version>2.0.3</version>
