--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,11 @@
             <version>3.16.0-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <scope>test</scope>
-        </dependency>
+         <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <version>[4.13.1,)</version>
+         </dependency>
 
         <dependency>
             <groupId>org.scalatest</groupId>
